# interviews-monorepo

./: .gitignore  package.json  pnpm-lock.yaml  turbo.json
apps/console-app/: jest.config.ts  package.json
apps/console-app/src/: index.ts
apps/console-app/test/: index.test.ts
apps/react-ts-app/: index.html  jest.config.ts  package.json
apps/react-ts-app/test/: App.test.tsx
apps/sandbox/leetcode/: package.json  tsconfig.json
apps/sandbox/leetcode/src/problems/: design-hit-counter.ts  dice-roll-simulation.ts  find-leaves-of-binary-tree.ts  greatest-common-divisor-of-strings.ts  lemonade-change.ts  letter-combinations-of-a-phone-number.ts  logger-rate-limiter.ts  longest-increasing-subsequence.ts  maximum-average-subtree.ts  meeting-rooms-ii.ts  merge-k-sorted-lists.ts  peeking-iterator.ts  shortest-distance-to-a-character.ts  time-based-key-value-store.ts  valid-parentheses.ts
apps/sandbox/leetcode/test/problems/: design-hit-counter.test.ts  (+14 more)
apps/sandbox/snake-app/: jest.config.ts  package.json  tsconfig.app.json
apps/sandbox/snake-app/src/: App.tsx  index.tsx
apps/sandbox/snake-app/test/: App.test.tsx
apps/sandbox/todo-app/: package.json  tsconfig.app.json
apps/sandbox/todo-app/src/: index.tsx
apps/sandbox/traffic-counter-app/: pyproject.toml
apps/sandbox/traffic-counter-app/src/traffic_counter/: __main__.py  entities.py  traffic_counter.py  traffic_data_parser.py  use_cases.py  utils.py
apps/sandbox/traffic-counter-app/tests/traffic_counter/: test_traffic_counter.py  test_traffic_data_parser.py  test_use_cases.py  test_utils.py
(+80 files in other folders)
